Closed Bug 1606661 Opened 4 years ago Closed 4 years ago

ThreadSanitizer: data race [@ emplace<mozilla::layers::CompositionPayload>] vs. [@ WritePoisonAtOffset<1>]

Categories

(Core :: Panning and Zooming, defect, P3)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox-esr68 --- unaffected
firefox71 --- unaffected
firefox72 --- unaffected
firefox73 --- fixed

People

(Reporter: decoder, Assigned: sefeng)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision d1ac49b9eb3e.

This looks interesting: We are racing between assigning mScrollPayload here:

https://searchfox.org/mozilla-central/rev/331f0c3b25089c9a16be65f4dc8c601aeaac8cc4/gfx/layers/apz/src/AsyncPanZoomController.cpp#3517

and poisoning it through an std::move here:

https://searchfox.org/mozilla-central/rev/331f0c3b25089c9a16be65f4dc8c601aeaac8cc4/gfx/layers/apz/src/AsyncPanZoomController.cpp#4240

I guess this could lead to corrupted data in mScrollPayload.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

This is a regression from bug 1500465 -- Sean, could you have a look please?

Flags: needinfo?(sefeng)
Regressed by: 1500465
Has Regression Range: --- → yes
Assignee: nobody → sefeng
Flags: needinfo?(sefeng)
Priority: -- → P3
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/055485b5aeb2
Fix the race condition in AsyncPanZoomController::RecordScrollPayload r=botond
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73

The potential consequence of the bug is two threads access mScrollPayload in the same time, and since it's only being used in SCROLL_PRESENT_TELEMETRY probe, the number reported may be inaccurate.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: