Bug 1606661 - Fix the race condition in AsyncPanZoomController::RecordScrollPayload r=botond

Differential Revision: https://phabricator.services.mozilla.com/D58649